--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 El Tamale Más Picante
 </title>
 
-<link rel="stylesheet" type="text/css" href="/static/css/style.css" >
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/style.css') }}" >
 
 </head>
 
@@ -19,6 +19,6 @@ El Tamale Más Picante
 <p> Testing, 1, 2, 3..</p>
 <p>{{index_testing}}</p>
 
-<script async type="text/javascript" src="/static/javascript/header.js"></script>
+<script async type="text/javascript" src="{{ url_for('static', filename='/static/javascript/header.js') }}"></script>
 
 </body>
