--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,22 +18,25 @@ body
 	background-color: #808080;
 
 	display: flex;
-	align-items: center;
+	align-items: stretch;
     justify-content: space-between;
 
-    max-height: 10vh;
+    height: 10vh;
 }
 
 #header-profile-picture
 {
+    height: 10vh;
 }
 
 #header-profile-picture img
 {
+    height: 10vh;
 }
 
 #header-title
 {
+    align-self: center;
 	font-size: 20px;
 }
 
@@ -44,16 +47,19 @@ body
 
 #header-main nav
 {
+    height: 10vh;
 }
 
 
 #header-main nav #menu-icon
 {
+    height: 10vh;
 	z-index: 80;
 }
 
 #header-main nav #menu-icon img
 {
+    height: 10vh;
 }
 
 #header-main nav #menu-icon:hover
@@ -82,9 +88,10 @@ body
 
 	display: flex;
 	flex-direction: column;
+    align-items: center;
 
 	position: absolute;
-	top: 100%;
+	top: 10vh;
 	right: 0;
 
 	transform-origin: 50% 0%;
@@ -97,5 +104,4 @@ body
 #header-main nav ul a
 {
 	margin: 5px;
-	padding-right: 20px;
 }
