--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,9 +6,9 @@
 Ollama Chat Interface
 </title>
 
-<link rel="stylesheet" type="text/css" href="/static/css/style.css" >
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/style.css') }}" >
 
-<link rel="stylesheet" type="text/css" href="/static/css/chatbot.css" >
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/chatbot.css') }}" >
 
 </head>
 
@@ -21,12 +21,12 @@ Ollama Chat Interface
 <span id="chatbot-output">
 </span>
 
-<form id="chatbot-input" action="{{ url_for('chatbot_input') }}" method="POST">
+<form id="chatbot-input" action="/chat" method="POST">
     <input type="text">
     <button type="submit">
     </button>
 </form>
 
-<script async type="text/javascript" src="/static/javascript/header.js"></script>
+<script async type="text/javascript" src="{{ url_for('static', filename='/static/javascript/header.js') }}"></script>
 
 </body>
