--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,7 +3,7 @@
 <head>
 
 <title>
-Ollama Chat Interface
+LLM Chat Interface
 </title>
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/style.css') }}" >
@@ -18,12 +18,14 @@ Ollama Chat Interface
 <span class="header">
 </span>
 
-<span id="chatbot-output">
-</span>
+<pre id="chatbot-output">
+    {{chat_output}}
+</pre>
 
-<form id="chatbot-input" action="/chat" method="POST">
-    <input type="text">
+<form id="chatbot-input" action="{{url_for('chat')}}" method="POST" autocomplete="off">
+    <input type="text" name="chat-input">
     <button type="submit">
+        chat
     </button>
 </form>
 
