Added header to quiz and translate templates.

--- a/templates/translate.html
+++ b/templates/translate.html
@@ -11,6 +11,9 @@
 <body>
 
 
+    <span class="header">
+    </span>
+
     <div>
 
         <div style="border:1px solid black">
@@ -43,8 +46,7 @@
 
     </div>
 
-    <script async type="text/javascript" src="/static/javascript/header.js">
-    </script>
+    <script async type="text/javascript" src="{{ url_for('static', filename='/static/javascript/header.js') }}"></script>
 
 
 </body>
