--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,130 @@ Learn - El Tamale Picante
 <p> Testing, 1, 2, 3..</p>
 <p>{{index_testing}}</p>
 
-<a href=" {{ url_for('start_quiz') }}">
-    <button class="btn btn-primary">Start Quiz</button>
-</a>
+<div>
+    <a href=" {{ url_for('start_quiz') }}">
+        <button class="btn btn-primary">Start Quiz</button>
+    </a>
+    
+    <br>
+    <p id="timer_status"> Timer Status: ON </p>
+
+    <label class="switch">
+        <input type="checkbox" id="timerToggle" checked>
+        <span class="slider round"></span>
+    </label>
+</div>
+
 
 <script async type="text/javascript" src="/static/javascript/header.js"></script>
+<script>
+    window.onload = loadTimerToggle;
+
+    timerToggle.addEventListener("change", setTimerToggle);
+
+    function setTimerToggle() {
+        const timerToggle = document.getElementById('timerToggle')
+        const status = timerToggle.checked;
+
+        document.getElementById('timer_status').textContent = status ? 'Timer Status: ON' : 'Timer Status: OFF';
+
+        // passing into backend variable
+        fetch('/toggleTimer', {
+            method: 'POST',
+            headers: {
+                'Content-Type' : 'application/json'
+            },
+            body: JSON.stringify({status: status})
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data)
+        })
+
+        .catch(error => {
+            console.log('Error', error)
+        });
+    }
+
+    function loadTimerToggle() {
+        fetch('/toggleTimer', {
+            method: 'GET',
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data.status);
+            document.getElementById('timerToggle').checked = data.status;
+            document.getElementById('timer_status').textContent = data.status ? 'Timer Status: ON' : 'Timer Status: OFF';
+
+        })
+        .catch(error => {
+            console.log('Error', error)
+        });
+    }
+
+</script>
 
 </body>
+
+<style>
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+</style>
