--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -12,6 +12,10 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Quiz</h1>
+        <div id="timer">
+            <span id="timer_title"></span>
+            <span id="count"></span>
+        </div>
         <form method="post">
             <h3>{{question.text}}</h3>
             <div class="form-group">
@@ -26,5 +30,5 @@
         </form>
         <p class="mt-3">Question {{ question_index }} of {{ total_questions }} </p>
     </div>
-    <script async type="text/javascript" src="/static/javascript/header.js"></script>
+    <script async type="text/javascript" src="/static/javascript/timer.js"></script>
 </body>
