--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -1,23 +1,180 @@
-body
+.chatbot-container
 {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+    
+    width: 100%;
 }
 
-form
+.chatbot-header
 {
+    border: solid 2px black;
+    border-bottom: none;
+
+    background-color: #FFBF00;
+
+    font-size: 30px;
+
+    width: 60vw;
+    height: 10vh;
+
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+    align-items: center;
+    text-align: left;
+}
+
+.chatbot-messagebox
+{
+    border: solid 2px black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+    background-color: white;
+
+    width: 60vw;
+    height: 60vh;
 }
 
 #chatbot-output
 {
+    max-width: 100%;
+    height: 47vh;
+
+    padding: 20px;
+
+    display: flex;
+	flex-direction: column;
+
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    box-sizing: border-box;
 }
 
 #chatbot-input
 {
+    width: inherit;
+    height: 10vh;
+
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 #chatbot-input input
 {
+    border: solid 2px #0067A5;
+    border-radius: 20px;
+
+    width: 40vw;
+    height: 5vh;
+
+    padding: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #chatbot-input button
 {
+    border: none;
+    border-radius: 5px;
+
+    width: 7vw;
+    height: 6vh;
+
+    padding: 5px;
+
+    color: white;
+    background-color: #0067A5;
+
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+#chatbot-input button:hover
+{
+    background-color: #FFBF00;
+    color: black;
+}
+
+#chatbot-input button:active
+{
+    transform: scale(1.4);
+}
+
+#chat-input-field:disabled {
+    pointer-events: none;
+    background-color: rgb(206, 206, 206);
+}
+
+#chatbot-submit:disabled {
+    cursor: default;
+    background-color: #FFBF00;
+    pointer-events: none;
+}
+
+.chatbot-user {
+    width: fit-content;
+    max-width: 50%;
+
+    border-radius: 20px;
+    border-bottom-right-radius: 0px;
+
+    background-color: #0067A5;
+    padding: 15px;
+
+    color: white;
+
+    text-align: right;
+    align-self: flex-end;
+}
+
+.chatbot-ai {
+    width: fit-content;
+    max-width: 50%;
+
+    border-radius: 20px;
+    border-bottom-left-radius: 0px;
+
+    background-color: #FFBF00;
+    padding: 15px;
+
+    color: black;
+
+    text-align: left;
+    align-self: flex-start;
+}
+
+
+.ellipsis {
+    display: inline-block;
+    width: 24px;
+    text-align: left;
+    font-weight: bold;
+}
+
+.ellipsis span {
+    display: inline-block;
+    animation: bounce 1.4s infinite;
+    font-size: 20px;
+    margin-right: 2px;
+
+    color: black;
+}
+
+.ellipsis span:nth-child(1) { animation-delay: 0s; }
+.ellipsis span:nth-child(2) { animation-delay: 0.2s; }
+.ellipsis span:nth-child(3) { animation-delay: 0.4s; }
+
+@keyframes bounce {
+    0%, 80%, 100% { transform: translateY(0); }
+    40% { transform: translateY(-5px); }
 }
