--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,34 +1,69 @@
 <!DOCTYPE HTML>
 
 <head>
-
-<title>
-LLM Chat Interface
-</title>
-
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/style.css') }}" >
-
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/chatbot.css') }}" >
-
+    <title>
+        LLM Chat Interface
+    </title>
 </head>
 
+<span class="header"></span>
+
+<br>
 
 <body>
+<div class="chatbot-container">
+    <div class="chatbot-header">
+        <span>temp</span>
+        <span>Chatear Conmigo</span>
+    </div>
 
-<span class="header">
-</span>
+    <div class="chatbot-messagebox">
 
-<pre id="chatbot-output">
-    {{chat_output}}
-</pre>
+        <div id="chatbot-output">
+            {% if chat_user_output %}
+                <div class="chatbot-user">{{chat_user_output | safe }}</div>
+            {% else %}
+                <div class="chatbot-ai">Send me a message to chat with me!</div>
+            {% endif %}
 
-<form id="chatbot-input" action="{{url_for('chat')}}" method="POST" autocomplete="off">
-    <input type="text" name="chat-input">
-    <button type="submit">
-        chat
-    </button>
-</form>
+            {% if chat_user_output %}
+                <div class="chatbot-ai">{{chat_ai_output | safe}}</div>
+            {% endif %}
+        </div>
 
-<script async type="text/javascript" src="{{ url_for('static', filename='/static/javascript/header.js') }}"></script>
-
+        <form id="chatbot-input" action="{{url_for('chat')}}" method="POST" autocomplete="off" onsubmit="showLoad()">
+            <input id="chat-input-field" type="text" name="chat-input">
+            <button type="submit" id="chatbot-submit">
+                Send
+            </button>
+            <span>temp</span>
+        </form>
+    </div>
+</div>
 </body>
+
+<link rel="stylesheet" type="text/css" href="/static/css/style.css" >
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/chatbot.css') }}" >
+<script async type="text/javascript" src="{{ url_for('static', filename='/static/javascript/header.js') }}"></script>
+<script>
+    function showLoad()
+    {
+        const submitBttn = document.getElementById('chatbot-submit');
+        const inputField = document.getElementById('chat-input-field');
+
+        const ellipsis = document.createElement("span");
+        ellipsis.classList.add("ellipsis");
+        ellipsis.innerHTML = '<span>.</span><span>.</span><span>.</span>'
+
+        submitBttn.innerHTML = "";
+        submitBttn.appendChild(ellipsis);
+
+        submitBttn.disabled = true;
+
+        setTimeout(() => {
+            inputField.disabled = true;
+        }, 1);
+
+        return true;
+    }
+</script>
