Fix static word bank and dynamic answer vocab in story generation

--- a/templates/story.html
+++ b/templates/story.html
@@ -25,7 +25,7 @@
       <h2>Story complete!</h2>
       <p>The full words used:</p>
       <ul>
-        {% for w in vocab_list %}
+        {% for w in answer_vocab %}
           <li>{{ w }}</li>
         {% endfor %}
       </ul>
