update variable name to be consistent

--- a/templates/matching.html
+++ b/templates/matching.html
@@ -82,7 +82,7 @@
         <label for="file_select">
             Choose File: 
         </label>
-        <select name="vocab_select"  id="vocab_select">
+        <select name="file_type"  id="file_type">
             <option value="Vocabulary">Vocabulary</option>
             <option value="Grammar">Grammar</option>
         </select>
