--- a/templates/chat.html
+++ b/templates/chat.html
@@ -13,7 +13,7 @@
 <body>
 <div class="chatbot-container">
     <div class="chatbot-header">
-        <span>temp</span>
+        <img src="/static/images/duck-profile.png" alt="AI Profile" class="profile-image" draggable="false">
         <span>Chatear Conmigo</span>
     </div>
 
@@ -37,7 +37,7 @@
             <button type="submit" id="chatbot-submit">
                 Envías
             </button>
-            <span>temp</span>
+            <img src="/static/images/capy-profile.png" alt="Profile" class="profile-image" draggable="false">
         </form>
     </div>
 
