--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -62,11 +62,17 @@
 
 #chatbot-input
 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
     width: inherit;
-    height: 10vh;
+    height: 8vh;
 
     padding-top: 20px;
     padding-bottom: 10px;
+
 }
 
 #chatbot-input input
@@ -97,6 +103,10 @@
 
     transition-duration: 0.4s;
     cursor: pointer;
+
+    text-align: center;
+
+    margin: 5px;
 }
 
 #chatbot-input button:hover
@@ -148,6 +158,19 @@
     cursor: default;
     background-color: #FFBF00;
     pointer-events: none;
+}
+
+.profile-image {
+    margin-left: 7px;
+    margin-right: 7px;
+
+    width: 50px;
+    height: 50px;
+
+    border-radius: 50%;
+
+    background: white;
+    border: 2px solid black;
 }
 
 .chatbot-user {
