--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 
 <span class="header"></span>
 
+<img src="/static/images/capy.png" alt="Capy Decor" class="main-decor-image" draggable="false">
+
 <div>
   <h1 class="main-choose-msg">¡Vamos aprender! Choose an activity to get started!</h1>
   <div class="main-game-container">
@@ -24,13 +26,15 @@
       </a>
   </div>
 
-  <div>
+  <div style="text-align: center;">
+    <!--
       <a href=" {{ url_for('start_quiz') }}">
           <button class="btn btn-primary">Start Quiz</button>
       </a>
       
       <br>
-      <p id="timer_status"> Timer Status: ON </p>
+    -->
+      <p id="timer_status"> Timer: ON </p>
 
       <label class="switch">
           <input type="checkbox" id="timerToggle" checked>
@@ -42,6 +46,8 @@
 
 <script async type="text/javascript" src="/static/javascript/header.js"></script>
 <script>
+    header = document.querySelector(".header");
+
     window.onload = loadTimerToggle;
 
     timerToggle.addEventListener("change", setTimerToggle);
@@ -50,7 +56,7 @@
         const timerToggle = document.getElementById('timerToggle')
         const status = timerToggle.checked;
 
-        document.getElementById('timer_status').textContent = status ? 'Timer Status: ON' : 'Timer Status: OFF';
+        document.getElementById('timer_status').textContent = status ? 'Timer: ON' : 'Timer: OFF';
 
         // passing into backend variable
         fetch('/toggleTimer', {
@@ -78,7 +84,7 @@
         .then(data => {
             console.log(data.status);
             document.getElementById('timerToggle').checked = data.status;
-            document.getElementById('timer_status').textContent = data.status ? 'Timer Status: ON' : 'Timer Status: OFF';
+            document.getElementById('timer_status').textContent = data.status ? 'Timer: ON' : 'Timer: OFF';
 
         })
         .catch(error => {
