reworked templates and logic to work with conjugation

--- a/templates/story_conjugation.html
+++ b/templates/story_conjugation.html
@@ -29,7 +29,7 @@
           <li>{{ w }}</li>
         {% endfor %}
       </ul>
-      <p><a href="{{ url_for('choose_course') }}">Choose another course</a></p>
+      <p><a href="{{ url_for('choose_course_conjugation') }}">Choose another course</a></p>
     {% else %}
       <div>
         {% for part in story %}
@@ -53,7 +53,7 @@
       {% if message %}
         <p style="color:red">{{ message }}</p>
       {% endif %}
-      <p><a href="{{ url_for('choose_course') }}">Back to courses</a></p>
+      <p><a href="{{ url_for('choose_course_conjugation') }}">Back to courses</a></p>
     {% endif %}
 
       <script>
