--- a/templates/choose_course_vocabulary.html
+++ b/templates/choose_course_vocabulary.html
@@ -5,7 +5,7 @@
     <h1>Choose Course</h1>
     <ul>
       {% for c in courses %}
-      <li><a href="{{ url_for('choose_chapter') }}?course={{ c }}">{{ c }}</a></li>
+      <li><a href="{{ url_for('choose_chapter_vocabulary') }}?course={{ c }}">{{ c }}</a></li>
       {% endfor %}
     </ul>
     <p><a href="/">Home</a></p>
